# scaleless_music

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  appveyor_rust_install.ps1  index.html  rustfmt.toml  search-index.js
benches/: lib.rs
examples/: README.md  instrument1.rs  instrument_overtone.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.Div.js  trait.Drop.js  trait.Mul.js
implementors/std/error/: trait.Error.js
scaleless_music/: index.html  sidebar-items.js
scaleless_music/sound/: BUFFER_SIZE_DEFAULT.v.html  MusicStructure.t.html  PI2.v.html  SAMPLE_RATE_DEFAULT.v.html  SampleCalc.t.html  SampleOutput.t.html  SoundGenerator.t.html  SoundStructure.t.html  TONE_FREQUENCY_MAX.v.html  TONE_FREQUENCY_MIN.v.html  constant.BUFFER_SIZE_DEFAULT.html  constant.PI2.html  constant.SAMPLE_RATE_DEFAULT.html  constant.TONE_FREQUENCY_MAX.html  constant.TONE_FREQUENCY_MIN.html  fn.get_sample_time.html  get_sample_time.v.html  index.html  sidebar-items.js  trait.MusicStructure.html  trait.SoundGenerator.html  trait.SoundStructure.html  type.SampleCalc.html  type.SampleOutput.html
scaleless_music/sound/amplitude/: AmplitudeCombination.t.html  AmplitudeConst.t.html  AmplitudeDecayExp.t.html  AmplitudeEqualLoudness.t.html  AmplitudeJoinable.t.html  AmplitudeProvider.t.html  AmplitudeSequence.t.html  FadeLinear.t.html  Tremolo.t.html  fn.is_valid_amplitude.html  index.html  is_valid_amplitude.v.html  sidebar-items.js  struct.AmplitudeCombination.html  struct.AmplitudeConst.html  struct.AmplitudeDecayExp.html  struct.AmplitudeEqualLoudness.html  struct.AmplitudeSequence.html  struct.FadeLinear.html  struct.Tremolo.html  trait.AmplitudeJoinable.html  trait.AmplitudeProvider.html
scaleless_music/sound/amplitude_overtones/: AmplitudeConstOvertones.t.html  AmplitudeDecayExpOvertones.t.html  AmplitudeOvertonesJoinable.t.html  AmplitudeOvertonesProvider.t.html  AmplitudeOvertonesSequence.t.html  index.html  sidebar-items.js  struct.AmplitudeConstOvertones.html  struct.AmplitudeDecayExpOvertones.html  struct.AmplitudeOvertonesSequence.html  trait.AmplitudeOvertonesJoinable.html  trait.AmplitudeOvertonesProvider.html
scaleless_music/sound/backend_portaudio/: BackendError.t.html  BackendResult.t.html  SoundInterface.t.html  enum.BackendError.html  index.html  sidebar-items.js  struct.SoundInterface.html  type.BackendResult.html
scaleless_music/sound/errors/: index.html  (+4 more)
src/: lib.rs  main.rs  math.rs
src/sound/: amplitude.rs  amplitude_overtones.rs  backend_portaudio.rs  backend_rsoundio.rs  backend_sdl2.rs  errors.rs  frequency.rs  instrument.rs  interface.rs  interval.rs  mod.rs  note.rs  progress.rs  rhythm.rs  sequence.rs  timing.rs  wave.rs
(+74 files in other folders)
