[package]
name = "scaleless_music"
description = "A library for building music with precise harmonies, without the limitations of any musical scale."
version = "0.0.8"
authors = ["Tibor Gáts <tibor.gats@gmail.com>"]
readme = "README.md"
keywords = ["music", "scaleless", "sound", "audio"]
license = "WTFPL"
repository = "https://github.com/tiborgats/scaleless_music"
documentation = "https://tiborgats.github.io/scaleless_music"

[features]
default = []
# Optional backends
be-portaudio = ["portaudio"]
be-rsoundio = ["rsoundio", "rb"]
be-sdl2 = ["sdl2"]

[dependencies]
portaudio = { version = "0.7.0", optional = true }
rsoundio = { version = "0.1.6", optional = true }
rb = { version = "0.2.0", optional = true }
sdl2 = { version = "0.25.0", optional = true }
num = "0.1.36"

[dev-dependencies]
piston_window = "0.57.0"
piston = "0.26.0"
conrod = "0.46.0"
