[package]
name = "scaleless_music"
description = "A library for building music with precise harmonies, without the limitations of any musical scale."
version = "0.0.8"
authors = ["Tibor Gáts <tibor.gats@gmail.com>"]
readme = "README.md"
keywords = ["music", "scaleless", "sound", "audio"]
license = "WTFPL"
repository = "https://github.com/tiborgats/scaleless_music"
documentation = "https://tiborgats.github.io/scaleless_music"

edition = "2018"

[features]
# Optional backends
be-portaudio = ["portaudio"]
be-rsoundio = ["rsoundio", "rb"]
be-sdl2 = ["sdl2"]
default = []

[dependencies]
num = "0.4.0"
portaudio = { version = "0.7.0", optional = true }
rb = { version = "0.3.2", optional = true }
rsoundio = { version = "0.1.6", optional = true }
sdl2 = { version = "0.34.5", optional = true }
thiserror = "1.0.26"

[dev-dependencies]
conrod = "0.62.1"
piston = "0.53.0"
piston_window = "0.120.0"
